<resources>
    <string name="app_name">HealthChecker</string>

    <string name="purpose">圖片搜尋或文字輸入？</string>
    <string name="search_food">食物名稱</string>
    <string name="delete_food">確定要刪除 %1$d 食物嗎？</string>
    <string name="delete_event">確定要刪除 %1$d 事件嗎？</string>
    <string name="delete">刪除</string>

    <string name="food_title">食物</string>
    <string name="sport_title">運動</string>
    <string name="enter_food_title">請輸入食物</string>
    <string name="enter_sport_title">請輸入運動</string>
    <string name="content">備註</string>
    <string name="enter_content">請輸入備註</string>
    <string name="calorie">熱量</string>
    <string name="enter_calorie">請輸入熱量</string>
    <string name="portions">份數</string>
    <string name="enter_portions">請輸入份數</string>
    <string name="grams">重量</string>
    <string name="enter_grams">請輸入重量 (克)</string>
    <string name="total_time">時間</string>
    <string name="hour">小時</string>
    <string name="min">分</string>

    <string name="write_external_storage_denied">沒有寫入外部儲存設備授權</string>
    <string name="read_external_storage_denied">沒有讀取外部儲存設備授權</string>
    <string name="search_title">圖片搜尋</string>
    <string name="search_picture">搜尋</string>
    <string name="action_settings">設定</string>

    <string name="facebook_app_id">1095415993853029</string>

    <string name="my_profile_title">個人資料</string>
    <string name="birthDay">生日</string>
    <string name="sex">性別</string>
    <string name="height">請輸入身高</string>
    <string name="weight">請輸入體重</string>
    <string name="enter_height">公分</string>
    <string name="enter_weight">公斤</string>
    <string name="your_BMI">您的 BMI : </string>
    <string name="your_BMR">您的 BMR : </string>
    <string name="wait_for_calculate">等待計算</string>
    <string name="update_btn">更新</string>
    <string name="select_day">選擇日期</string>
    <string name="select_time">選擇時間</string>
    <string name="spressure">收縮壓</string>
    <string name="dpressure">舒張壓</string>
    <string name="pulse"> 脈搏 </string>
    <string name="water"> 水 (cc)</string>
    <string name="temperature"> 溫度 (攝氏)</string>

    <string name="my_current_exercise_title">運動情形</string>
    <string name="sectionZero">請問您一周的運動頻率?</string>
    <string name="answerA_0">a. 多為久坐不動</string>
    <string name="answerB_0">b. 稍微活躍 (每周一到三次)</string>
    <string name="answerC_0">c. 適當活躍 (每周三到五次)</string>
    <string name="answerD_0">d. 非常活躍 (每周六到七次)</string>
    <string name="answerE_0">e. 極度活躍 (每天都有運動)</string>
    <string name="sectionOne">您在上班/白天時有進行什麼肢體運動? (在家上班、病假或在學校上課也算)</string>
    <string name="answerA_1">a. 大部分時間都坐著</string>
    <string name="answerB_1">b. 坐著工作但有走動的需求 (從事輕微活動的工作)</string>
    <string name="answerC_1">c. 大部分時間都站著或走動 (如商店店員、傳遞信件、清潔工作)</string>
    <string name="answerD_1">d. 勞力負荷工作 (如建築工作或農耕)</string>
    <string name="sectionTwo">請問您在休息時間的運動量?</string>
    <string name="answerA_2">a. 非常少 (大部分時間都坐著)</string>
    <string name="answerB_2">b. 少 (多為三十分鐘以內的走動)</string>
    <string name="answerC_2">c. 適中 (多為規律運動，如健走、騎自行車或是運動三十分鐘以上)</string>
    <string name="answerD_2">d. 非常大 (每天超過一小時的劇烈或是費力的運動)</string>

    <string name="my_temperature_record_title">體溫紀錄 </string>
    <string name="drink_water_diary_title">飲水日誌</string>
    <string name="my_blood_pressure_title">血壓紀錄</string>
    <string name="my_weight_loss_goal_title">減重目標</string>
    <string name="my_target_weight">設定目標體重</string>
    <string name="my_weekly_target">設定每周目標</string>
    <string name="enter_weekly_target">0.5 ~ 1 公斤</string>
    <string name="suggest">應攝取比BMR更多的熱量 </string>
    <string name="absorb_heat">健康所需攝取熱量: </string>
    <string name="consume_heat">健康所需消耗熱量: </string>
    <string name="wait_for_suggest">等待建議中 </string>

    <string name="display_as_metric_imperial_title">單位設定</string>
    <string name="metric_or_imperial">請選擇單位</string>
    <string name="metric">公制</string>
    <string name="imperial">英制</string>

    <string name="weight_chart_title">體重圖表</string>

    <string name="calorie_consumption_title">熱量消耗</string>

    <string name="my_favourites_title">我的最愛</string>

    <string name="dialog_button">確認</string>
    <string name="dialog_cancel_button">取消</string>
    <string name="choose_food">選擇食物</string>
    <string name="choose_sport">選擇運動</string>

    <string name="homeTextView">%1$d%2$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="default_home_values">0</string>
    <string name="home_icon_description">icon</string>
    <string name="exercise_minute">分鐘</string>
    <string name="exercise_steps">步</string>
    <string name="exercise_calorie">大卡</string>
    <string name="exercise_distance">公尺</string>

    <string name="cancel_button">取消</string>
    <string name="affirm_button">確認</string>
    <string name="date_button">日期</string>
    <string name="time_button">時間</string>
    <string name="voice_button">說</string>
    <string name="voice_result">語音結果</string>
    <string name="search_button">搜尋</string>
    <string name="back_button">返回</string>
    <string name="send_button">送出</string>

    <string name="chat_bot_text">想說什麼呢?</string>

    <string-array name="meal_type">
        <item>早餐</item>
        <item>午餐</item>
        <item>晚餐</item>
        <item>點心</item>
        <item>宵夜</item>
        <item>其他</item>
    </string-array>

    <string name="all">全部</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="snack">點心</string>
    <string name="night_snack">宵夜</string>
    <string name="other">其他</string>
    <string name="sport">運動</string>

    <string name="current_achieve">目前</string>
    <string name="goal_achieve">目標</string>

    <string name="profile_title">個人資料</string>
    <string name="current_exercise_title">運動情形</string>
    <string name="list_title">減重目標</string>
    <string name="unit_title">單位設定</string>
    <string name="weight_graph_title">體重圖表</string>
    <string name="line_chart_title">熱量消耗</string>
</resources>
