<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".Activity.MyCurrentExerciseActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0, 1">

        <TableRow>
            <TextView
                android:text="@string/sectionZero"
                android:padding="12sp"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:background="@drawable/rectangle_drawable"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerA_0"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:padding="12sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:id="@+id/sectionZeroSpinner"
                android:background="@drawable/rectangle_drawable"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerB_0"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerC_0"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerD_0"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerE_0"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/sectionOne"
                android:padding="12sp"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:background="@drawable/rectangle_drawable"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerA_1"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:padding="12sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:id="@+id/sectionOneSpinner"
                android:background="@drawable/rectangle_drawable"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerB_1"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerC_1"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerD_1"
                android:paddingLeft="12sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/sectionTwo"
                android:padding="12sp"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:background="@drawable/rectangle_drawable"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerA_2"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:padding="12sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:id="@+id/sectionTwoSpinner"
                android:background="@drawable/rectangle_drawable"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerB_2"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerC_2"
                android:paddingLeft="12sp"
                android:paddingBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/answerD_2"
                android:paddingLeft="12sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:layout_span="2"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </TableLayout>

    </ScrollView>

</RelativeLayout>