<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".Activity.FoodActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_span="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lv_result"
            android:layout_column="0" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:text="@string/food_title"
            android:background="#3293c4"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/title_text"
            android:hint="@string/enter_food_title"
            android:background="#b1e0ff"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="說"
            android:onClick="onClickVoice"
            android:id="@+id/button"
            android:layout_column="2" />

    </TableRow>


    <TableRow>

        <TextView
            android:text="@string/content"
            android:layout_height="70sp"
            android:layout_gravity="center_vertical"
            android:background="#3293c4"
            android:gravity="center"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <EditText
            android:layout_span="2"
            android:id="@+id/content_text"
            android:hint="@string/enter_content"
            android:layout_gravity="top"
            android:layout_height="70sp"
            android:background="#b1e0ff"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/calorie"
            android:background="#3293c4"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <EditText
            android:layout_span="2"
            android:id="@+id/calorie_text"
            android:hint="@string/enter_calorie"
            android:background="#b1e0ff"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/portions"
            android:background="#3293c4"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <EditText
            android:layout_span="2"
            android:id="@+id/portions_text"
            android:hint="@string/enter_portions"
            android:background="#b1e0ff"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/grams"
            android:background="#3293c4"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <EditText
            android:layout_span="2"
            android:id="@+id/grams_text"
            android:hint="@string/enter_grams"
            android:background="#b1e0ff"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <!-- 顯示圖片 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_span="3"
            android:id="@+id/picture_food"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="false"
            android:layout_margin="3sp"
            android:background="@drawable/rectangle_drawable"
            android:padding="6sp"
            android:visibility="invisible" />

    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <Button
                android:id="@+id/ok_item"
                android:text="@android:string/ok"
                android:onClick="onSubmit"
                android:padding="6sp"
                android:layout_margin="3sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/cancel_item"
                android:text="@android:string/cancel"
                android:onClick="onSubmit"
                android:padding="6sp"
                android:layout_margin="3sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>

</TableLayout>