<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2,3,4"
    android:background="@drawable/background_color"
    tools:context=".Activity.SportActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/sport_title"
            android:background="@drawable/rectangle_drawable"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView" />

        <!--<EditText
            android:id="@+id/title_text"
            android:hint="@string/enter_sport_title"
            android:background="@drawable/rectangle_drawable"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:layout_span="4"
            android:textAppearance="?android:attr/textAppearanceMedium" />-->

        <EditText
            android:id="@+id/dialog_edittext"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/rectangle_drawable"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:layout_weight="1"
            android:layout_span="4"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Button
            android:id="@+id/go_search"
            android:text="@string/search_button"
            android:onClick="onSubmit"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textColor="@color/black"
            android:background="@drawable/bar_color"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </TableRow>



    <TableRow
        android:paddingTop="10dp">
        <TextView
            android:text="@string/calorie"
            android:background="@drawable/rectangle_drawable"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/calorie_text"
            android:hint="@string/enter_calorie"
            android:background="@drawable/rectangle_drawable"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:layout_weight="1"
            android:layout_span="4"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        android:paddingTop="10dp">

        <TextView
            android:text="@string/total_time"
            android:background="@drawable/rectangle_drawable"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView2" />

        <EditText
            android:id="@+id/hour_text"
            android:background="@drawable/rectangle_drawable"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:text="@string/hour"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/minute_text"
            android:background="@drawable/rectangle_drawable"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:text="@string/min"
            android:padding="6sp"
            android:layout_margin="3sp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        android:paddingTop="10dp">

        <TextView
            android:text="@string/content"
            android:layout_height="70sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rectangle_drawable"
            android:gravity="center"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/content_text"
            android:hint="@string/enter_content"
            android:layout_gravity="top"
            android:layout_height="70sp"
            android:background="@drawable/rectangle_drawable"
            android:padding="10sp"
            android:layout_margin="3sp"
            android:layout_weight="1"
            android:layout_span="4"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="260dp"
        android:stretchColumns="*">

        <TableRow>
            <Button
                android:id="@+id/ok_item"
                android:text="@string/affirm_button"
                android:onClick="onSubmit"
                android:padding="6sp"
                android:layout_margin="3sp"
                android:textColor="@color/black"
                android:background="@drawable/bar_color"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/cancel_item"
                android:text="@string/cancel_button"
                android:onClick="onSubmit"
                android:padding="6sp"
                android:layout_margin="3sp"
                android:textColor="@color/black"
                android:background="@drawable/bar_color"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

    </TableLayout>

</TableLayout>