<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".Activity.MyProfileActivity">

    <TableRow>
        <TextView
            android:text="@string/birthDay"
            android:padding="12sp"
            android:layout_margin="10sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:layout_margin="10sp"
            android:id="@+id/birth_day_button"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
            <!--android:background="@drawable/button_drawable"-->

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/sex"
            android:padding="12sp"
            android:layout_margin="10sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:layout_margin="10sp"
            android:id="@+id/sex_spinner"
            android:layout_column="1" />

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/height"
            android:padding="12sp"
            android:layout_margin="10sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/weight"
            android:padding="12sp"
            android:layout_margin="10sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

</TableLayout>